[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/common/UserInterface/Highscore.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/user_interface.tres" type="Theme" id=2]
[ext_resource path="res://assets/general/Counter.png" type="Texture" id=3]
[ext_resource path="res://assets/general/droid-sans/DroidSans.tres" type="DynamicFont" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 64, 64 )

[node name="Highscore" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.207843 )

[node name="ScrollContainer" type="ScrollContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 80.0
margin_top = 8.0
margin_right = 80.0
margin_bottom = -2.0
rect_scale = Vector2( 0.8, 0.8 )
scroll_horizontal_enabled = false

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/ScrollContainer"]
margin_right = 684.0
margin_bottom = 64.0

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/ScrollContainer/CenterContainer"]
margin_right = 684.0
margin_bottom = 64.0
custom_constants/separation = 64

[node name="VBoxContainerName" type="VBoxContainer" parent="ColorRect/ScrollContainer/CenterContainer/HBoxContainer"]
margin_right = 129.0
margin_bottom = 64.0

[node name="Label" type="Label" parent="ColorRect/ScrollContainer/CenterContainer/HBoxContainer/VBoxContainerName"]
margin_right = 129.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
custom_fonts/font = ExtResource( 4 )
text = "Name"

[node name="ColorRect" type="ColorRect" parent="ColorRect/ScrollContainer/CenterContainer/HBoxContainer/VBoxContainerName/Label"]
visible = false
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.709804, 0.0745098, 0.356863 )

[node name="VBoxContainerTime" type="VBoxContainer" parent="ColorRect/ScrollContainer/CenterContainer/HBoxContainer"]
margin_left = 193.0
margin_right = 300.0
margin_bottom = 64.0

[node name="Label" type="Label" parent="ColorRect/ScrollContainer/CenterContainer/HBoxContainer/VBoxContainerTime"]
margin_right = 107.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
custom_fonts/font = ExtResource( 4 )
text = "Time"

[node name="VBoxContainerDashes" type="VBoxContainer" parent="ColorRect/ScrollContainer/CenterContainer/HBoxContainer"]
margin_left = 364.0
margin_right = 428.0
margin_bottom = 64.0

[node name="TextureRect" type="TextureRect" parent="ColorRect/ScrollContainer/CenterContainer/HBoxContainer/VBoxContainerDashes"]
margin_right = 64.0
margin_bottom = 64.0
texture = SubResource( 1 )

[node name="VBoxContainerDeaths" type="VBoxContainer" parent="ColorRect/ScrollContainer/CenterContainer/HBoxContainer"]
margin_left = 492.0
margin_right = 556.0
margin_bottom = 64.0

[node name="TextureRect2" type="TextureRect" parent="ColorRect/ScrollContainer/CenterContainer/HBoxContainer/VBoxContainerDeaths"]
margin_right = 64.0
margin_bottom = 64.0
texture = SubResource( 2 )

[node name="VBoxContainerSpace" type="VBoxContainer" parent="ColorRect/ScrollContainer/CenterContainer/HBoxContainer"]
margin_left = 620.0
margin_right = 684.0
margin_bottom = 64.0

[node name="TextureRect3" type="TextureRect" parent="ColorRect/ScrollContainer/CenterContainer/HBoxContainer/VBoxContainerSpace"]
margin_right = 64.0
margin_bottom = 64.0
texture = SubResource( 3 )

[node name="ResumeButton" type="Button" parent="ColorRect"]
margin_left = 304.0
margin_top = 392.0
margin_right = 484.0
margin_bottom = 438.0
rect_min_size = Vector2( 180, 40 )
size_flags_horizontal = 4
theme = ExtResource( 2 )
button_mask = 0
text = "Resume"

[connection signal="pressed" from="ColorRect/ResumeButton" to="." method="_on_ResumeButton_pressed"]
